SERVER-78009 Commit/Abort Resharding is Retryable on Shutdown