src/mongo/db/s/config/configsvr_abort_reshard_collection_command.cpp
@@ -102,10 +102,10 @@ void assertExistsReshardingDocument(OperationContext* opCtx, UUID reshardingUUID
 }
 
 auto assertGetReshardingMachine(OperationContext* opCtx, UUID reshardingUUID) {
-    auto machine = resharding::tryGetReshardingStateMachine<ReshardingCoordinatorService,
-                                                            ReshardingCoordinator,
-                                                            ReshardingCoordinatorDocument>(
-        opCtx, reshardingUUID);
+    auto machine = resharding::tryGetReshardingStateMachineAndThrowIfShuttingDown<
+        ReshardingCoordinatorService,
+        ReshardingCoordinator,
+        ReshardingCoordinatorDocument>(opCtx, reshardingUUID);
 
     uassert(ErrorCodes::NoSuchReshardCollection,
             "Could not find in-progress resharding operation to abort",
