src/mongo/db/s/config/configsvr_commit_reshard_collection_command.cpp
@@ -102,10 +102,10 @@ public:
 
             UUID reshardingUUID = retrieveReshardingUUID(opCtx, ns());
 
-            auto machine = resharding::tryGetReshardingStateMachine<ReshardingCoordinatorService,
-                                                                    ReshardingCoordinator,
-                                                                    ReshardingCoordinatorDocument>(
-                opCtx, reshardingUUID);
+            auto machine = resharding::tryGetReshardingStateMachineAndThrowIfShuttingDown<
+                ReshardingCoordinatorService,
+                ReshardingCoordinator,
+                ReshardingCoordinatorDocument>(opCtx, reshardingUUID);
 
             uassert(ErrorCodes::NoSuchReshardCollection,
                     "Could not find in-progress resharding operation to commit",
